[package]
name = "sync_tools"
version = "0.1.0"
authors = ["Jacob Zuo <chopinsky@live.com>"]
license = "MIT"
edition = "2018"
keywords = ["atomic", "sync", "sync.Pool", "buffer", "lock-free"]
categories = ["concurrency", "memory-management", "data-structures"]

[dependencies.byte_buffer]
version = "0.1.1"
path = "./byte_buffer"

[dependencies.sync_pool]
version = "0.1.0"
path = "./sync_pool"

[workspace]
members = [
    ".",
    "byte_buffer",
    "sync_pool",
]