[package]
name = "sync_tools"
description = "a collection of libraries to promote object reuse"
version = "0.1.1"
authors = ["Jacob Zuo <chopinsky@live.com>"]
license = "MIT"
edition = "2018"
keywords = ["atomic", "sync", "pool", "byte", "buffer"]
categories = ["concurrency", "memory-management", "data-structures"]

[dependencies.byte_buffer]
version = "0.1.2"
path = "./byte_buffer"

[dependencies.syncpool]
version = "0.1.5"
path = "./syncpool"

[workspace]
members = [
    ".",
    "byte_buffer",
    "syncpool",
]